--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup --config && npx postcss src/style.css > dist/style.min.css"
+    "build": "gulp build",
+    "start": "gulp"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "cssnano": "^7.0.1",
-    "postcss": "^8.4.38",
-    "postcss-cli": "^11.0.0",
-    "rollup": "^4.18.0"
+    "browser-sync": "^3.0.2",
+    "gulp": "^5.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-terser": "^2.1.0",
+    "rollup": "^4.18.0",
+    "rollup-stream": "^1.24.1",
+    "sass": "^1.77.2",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
