--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "sass": "^1.77.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
+  },
+  "dependencies": {
+    "gulp-imagemin": "^9.1.0"
   }
 }
